--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
       - "8000:5000"
     env_file:
       - ./.env.dev
+
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=hello_flask
+      - POSTGRES_PASSWORD=hello_flask
+      - POSTGRES_DB=hello_flask_dev
+
+volumes:
+  postgres_data:
