--- a/services/web/pyproject.toml
+++ b/services/web/pyproject.toml
@@ -10,6 +10,8 @@ Flask = "1.1.2"
 Jinja2 = "3.0.3"
 itsdangerous = "2.0.1"
 Werkzeug = "2.0.3"
+Flask-SQLAlchemy = "2.5.1"
+psycopg2 = "2.8.6"
 
 [tool.poetry.dev-dependencies]
 
