--- a/services/web/pyproject.toml
+++ b/services/web/pyproject.toml
@@ -12,8 +12,12 @@ itsdangerous = "2.0.1"
 Werkzeug = "2.0.3"
 Flask-SQLAlchemy = "2.5.1"
 psycopg2 = "2.8.6"
+gunicorn = "20.1.0"
 
 [tool.poetry.dev-dependencies]
+
+[tool.distutils.bdist_wheel]
+universal = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
