--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,25 @@
 version: '3.8'
 
 services:
+
+  nginx:
+    build: ./services/nginx
+    ports:
+      - 1337:80
+    volumes:
+      - static_volume:/home/app/web/project/static
+    depends_on:
+      - web
+
   web:
     build:
       context: ./services/web
       dockerfile: Dockerfile.prod
     command: gunicorn --bind 0.0.0.0:5000 manage:app
-    ports:
-      - 5000:5000
+    volumes:
+      - static_volume:/home/app/web/project/static
+    expose:
+      - 5000
     env_file:
       - ./.env.prod
     depends_on:
@@ -22,3 +34,4 @@ services:
 
 volumes:
   postgres_data_prod:
+  static_volume:
