--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,7 @@ services:
       - 1337:80
     volumes:
       - static_volume:/home/app/web/project/static
+      - media_volume:/home/app/web/project/media
     depends_on:
       - web
 
@@ -18,6 +19,7 @@ services:
     command: gunicorn --bind 0.0.0.0:5000 manage:app
     volumes:
       - static_volume:/home/app/web/project/static
+      - media_volume:/home/app/web/project/media
     expose:
       - 5000
     env_file:
@@ -35,3 +37,4 @@ services:
 volumes:
   postgres_data_prod:
   static_volume:
+  media_volume:
